# co-driver

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  config.toml  docker-compose.yml  quick-start.sh  test-deployment.js  test_gateway.sh  test_websocket.js
.github/workflows/: deploy-pages.yml
docs/: index.html
examples/: README.md
examples/file-tools-server/: package-lock.json  package.json  server.js
examples/mcp-server/: README.md  package-lock.json  package.json  server.js
examples/python-server/: requirements.txt  server.py
examples/web-tools-server/: package-lock.json  package.json  server.js
monitoring/: prometheus.yml
src/: config.rs  error.rs  gateway.rs  health.rs  lib.rs  main.rs  metrics.rs  server.rs
src/mcp/: client.rs  mod.rs  protocol.rs  server.rs  transport.rs
src/middleware/: auth.rs  compression.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs  request_id.rs  timeout.rs  transform.rs
