[package]
name = "mcp-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Siddharth Ghatti"]
description = "A high-performance MCP (Model Context Protocol) Gateway in Rust"
license = "MIT"
repository = "https://github.com/your-org/mcp-gateway"
keywords = ["mcp", "gateway", "api", "proxy", "microservices"]
categories = ["web-programming", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# WebSocket
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = 2
overflow-checks = true

[[bin]]
name = "mcp-gateway"
path = "src/main.rs"

[features]
default = []
testing = []
